<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marine.mastermind.MainActivity"
    android:background="@android:color/background_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="@android:color/background_dark"
        android:id="@+id/brain_wallpaper_layout"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="312dp"
            app:srcCompat="@drawable/brain_wallpaper"
            android:id="@+id/imageView" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/brain_wallpaper_layout"
        android:layout_weight="0.12"
        android:id="@+id/accueil_buttons_layout"
        android:background="@android:color/background_dark">

        <Button
            android:text="@string/jouer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/jouer_button"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:textColor="@android:color/holo_blue_bright"
            android:tag="0"
            android:onClick="gererClickButtons" />

        <Button
            android:text="@string/regles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regles_button"
            android:layout_weight="1"
            android:tag="1"
            android:onClick="gererClickButtons"
            android:textColor="@android:color/holo_blue_bright"
            android:background="@android:color/background_dark" />

        <Button
            android:text="@string/quitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quitter_button"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:textColor="@android:color/holo_blue_bright" />

        <TextView
            android:text="@string/createurs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/createurs_textView"
            android:layout_weight="1"
            android:textColor="@android:color/holo_blue_dark"
            android:textAlignment="center" />
    </LinearLayout>



</RelativeLayout>
