<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.00">

            <Button
                android:text="@string/retour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/retour_button"
                android:layout_weight="1"
                android:background="@android:color/background_dark"
                android:textColor="@android:color/background_light"
                android:textSize="10sp"
                android:tag="2"
                android:onClick="gererClickButtons" />

            <TextView
                android:text="@string/regles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/regles2_textView"
                android:textColor="@android:color/holo_blue_bright"
                android:textSize="36sp"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:text="@string/regles_objectif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regles3_textView"
            android:layout_weight="0.01"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>